<resources>
    <string name="app_name">Nabophial</string>
    <string name="other">Autre</string>
    <string name="settings">Parametres</string>
    <string name="button">Button</string>
    <string name="welcome">Bienvenue</string>
    <string name="email">Email</string>
    <string name="password">Mot de Passe</string>
    <string name="signin">Connexion</string>
    <string name="expactation">Nous vous attendions</string>
    <string name="signup">Toujours pas de compte ? Inscrivez vous !</string>
    <string name="forget_password">Mot de passe oublié</string>
    <string name="repeatedPassword">Repeter votre mot de passe</string>
    <string name="firstName">Prénom</string>
    <string name="lastName">Nom</string>
    <string name="SignUp">Inscription</string>
    <string name="NotRegisterYet">Pas encore de compte ?</string>
    <string name="submit">Envoyer</string>
    <string name="ResetPassword">Mot de passe oublié</string>
    <string name="explainResetPass">saisissez votre mot de passe pour reinitialiser votre mot de passe</string>
    <string name="updateProfile">mettre à jour</string>

</resources>
